test/testdata/classes/methods/static/redefined_parameter_error.lox
class Foo {
  static bar(x) {
    // error: x has already been declared
    // lint error: x has already been declared
    var x = 1;
    _ = x;
  }
}

_ = Foo;
